# avcs

./: .gitignore  AGENTS.md  README.md  mix.exs  versions
.agents/skills/: render-plan  run-plan
.github/workflows/: desktop-macos.yml  generate-tauri-updater-key.yml
config/: config.exs  dev.exs  runtime.exs  test.exs
docs/: avcs_agent_goal.md
docs/i18n/: README.zh-CN.md
docs/plans/: 001-board-object.md  001-boardview.md  001-edit-rerun.md  001-provider-settings.md  002-board-view.md  002-drop-output.md  002-project-sqlite-info.md  002-rename-project.md  002-tauri.md  003-codex-rpc-tracing.md  003-composer.md  003-site-settings.md  004-composer-stop.md  004-undo-redo.md
docs/prds/: overview.md
lib/: avcs.ex  avcs_desktop_app.ex  avcs_web.ex
lib/avcs/: application.ex  assets.ex  board.ex  desktop.ex  events.ex  projects.ex  repo.ex  session.ex  site_settings.ex  threads.ex  time.ex  trace.ex  turns.ex
lib/avcs_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
priv/agent/: thread-runtime-instructions.md
priv/codex_app_server/: schema_manifest.json
priv/repo/: seeds.exs
rel/app/: README.md  env.sh.eex  tauri.sh  vm.args.eex
rel/app/src-tauri/: .gitignore  App.entitlements  Cargo.toml  tauri.conf.json
rel/app/src-tauri/capabilities/: default.json
rel/app/src-tauri/icons/: AppIcon.icns
rel/app/src-tauri/src/: lib.rs  main.rs
test/: test_helper.exs
test/avcs/: agent_data_provider_script_test.exs  agent_runner_test.exs  desktop_test.exs  local_first_test.exs  (+2 more)
web/: index.html  package-lock.json  package.json  vite.config.js
(+117 files in other folders)
