[package]
name = "avcs"
version = "0.1.0"
edition = "2021"

[lib]
name = "avcs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
elixirkit = { git = "https://github.com/livebook-dev/elixirkit.git" }
serde_json = "1"
url = "2"
